--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,15 @@ body{
     padding: 0;
     font-family: "Montserrat", "Montserrat Placeholder", sans-serif;
 }
+.community_images{
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    transition: transform .5s;
+    transform: scale(1.03) !important;
+    opacity: 0.5s;
+}
+.community_images:hover{
+    transform: scale(1.08) !important;
+    opacity: 1;
+}
